--- a/src/views/sample.ejs
+++ b/src/views/sample.ejs
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1> hello world with nodejs - @hoidanit</h1>
+    <h1> hello world with nodejs - @ThachDev</h1>
 </body>
 
 </html>
